--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <style>
 #header {
-    background-color:black;
-    color:white;
+    background-color:red;
+    color:red;
     text-align:center;
     padding:5px;
 }
@@ -43,30 +43,28 @@
 <body>
 
 <div id="header">
-<h1>City Gallery</h1>
+<h1>张北张北！！！</h1>
 </div>
 
 <div id="nav">
-London<br>
-Paris<br>
-Tokyo<br>
+张北张北！！！<br>
+张北张北！！！<br>
+张北张北！！！<br>
 </div>
 
 <div id="nav2">
-London<br>
-Paris<br>
-Tokyo<br>
+张北张北！！！<br>
+张北张北！！！<br>
+张北张北！！！<br>
 </div>
 
 <div id="section">
-<h2>London</h2>
+<h2>张北张北！！！</h2>
 <p>
-London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.
+张北张北！！！
 </p>
 <p>
-Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.
+张北张北！！！
 </p>
 </div>
 
